UPDATED FOOTER IN MOBILES

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <!-- HAMBURGER -->
         <input type="checkbox" id="hamCheckbox">
         <label for="hamCheckbox" class="hamburger"><i class="fa-solid fa-bars"></i></label>
@@ -313,7 +313,7 @@
                     <div class="images">
                         <div class="itemCard">
                             <img src="./Images/Carousel_card_images/carouselCard7_1.jpg" alt="AC">
-                            <span>Women's Clothing</span>
+                            <span>Women's</span>
                         </div>
                         <div class="itemCard">
                             <img src="./Images/Carousel_card_images/carouselCard6_4.jpg" alt="AC">
@@ -380,7 +380,7 @@
                 </section>
             </section>
         </main>
-        
+
         <!-- Hsections -->
         <div class="hSections">
             <section class="items">
