--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                 English
             </span>
             <span>
-                <img src="./Images/Navbar_Images/Flag_of_India.svg.webp" alt="" class="indiaflag">India
+                <img src="./Images/Navbar_Images/Flag_of_India.svg.webp" alt="" class="indiaflag"> &nbsp India
             </span>
         </section>
         <section class="copy">
