--- a/index.html
+++ b/index.html
@@ -39,24 +39,26 @@
             </div>
         </div>
         <!-- SEARCH BAR -->
-        <div class="searchbar">
+        <div class="searchbar-container">
             <!-- ITEM DROPDOWN -->
-            <select name="" class="searchDropdown height">
-                <option value="">ALL</option>
-                <option value="">DEVICES</option>
-                <option value="">FASHION</option>
-                <option value="">FRESH</option>
-                <option value="">PHARMACY</option>
-                <option value="">BOOKS</option>
-                <option value="">VIDEO</option>
-                <option value="">GROCERY</option>
-                <option value="">DEALS</option>
-                <option value="">GIFT CARDS</option>
-            </select>
+                <select class="searchDropdown">
+                    <option>ALL</option>
+                    <option>DEVICES</option>
+                    <option>FRESH</option>
+                    <option>FASHION</option>
+                    <option>PHARMACY</option>
+                    <option>BOOKS</option>
+                    <option>VIDEO</option>
+                    <option>GROCERY</option>
+                    <option>DEALS</option>
+                    <option>GIFT CARDS</option>
+                </select>
 
-            <input type="text" class="search height" placeholder="Search Amazon.in">
+                <input type="text" class="searchinput" placeholder="Search Amazon.in">
 
-            <i class="fa-solid fa-magnifying-glass height searchIcon"></i>
+            <div class="searchIcon">
+                <i class="fa-solid fa-magnifying-glass height "></i>
+            </div>
         </div>
         <input type="checkbox" id="loginbox">
         <!-- login desktop -->
@@ -74,7 +76,7 @@
         <div class="language">
             <img src="./Images/Navbar_Images/Flag_of_India.svg.webp" class="flagIMG" alt="flag">
             <!-- LANGUAGE Dropdown -->
-            <select name="" id="">
+            <select class="languagedropdown">
                 <option value="">Eng</option>
                 <option value="">HIN</option>
                 <option value="">TEL</option>
