Added Mobile Cards

--- a/index.html
+++ b/index.html
@@ -381,6 +381,70 @@
                     <a href="#" class="seemore">See all Offers</a>
                 </section>
             </section>
+
+            <section class="Mobile-cards">
+                <!-- card-1 -->
+                <div class="mobilecard-container">
+                    <img src="./Phone_Cards/BuyZone_p1.jpeg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/BuyZone_p2.jpeg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/BuyZone_p3.jpeg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/BuyZone_p4.jpeg" alt="" class="BuyzoneProduct">
+                </div>
+                <!-- card-2 -->
+                <div class="mobilecard-container">
+                    <img src="./Phone_Cards/card2_1.jpg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/Card2_2.jpg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/Card2_3.jpg" alt="" class="BuyzoneProduct">
+                    <img src="./Phone_Cards/Card2_4.jpg" alt="" class="BuyzoneProduct">
+                </div>
+        
+                <!-- card-3 -->
+                <div class="mobilecard-container">
+                    <img src="./Phone_Cards/Under_1.jpg" alt="" class="BuyzoneProductC3">
+                    <img src="./Phone_Cards/Under_2.jpg" alt="" class="BuyzoneProductC3">
+                    <img src="./Phone_Cards/Under_3.jpg" alt="" class="BuyzoneProductC3">
+                    <img src="./Phone_Cards/Under_4.jpg" alt="" class="BuyzoneProductC3">
+                </div>
+        
+                <!-- Card-4 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Headsets.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-5 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Grocery.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-6 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Homeware.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-7 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Mobile_Accessories.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-8 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/toys.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-9 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Bazaar.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-10-->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/wacthes.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-11-->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/Welcome_offers.jpg" alt="" class="itemCards">
+                </div>
+            </section>
+            <section class="delivery">
+                <img src="./Images/Phone_Cards/delivery.jpg" alt="" class="deliveryimage">
+            </section>
+            <section class="advertisement">
+                <img src="./Images/Phone_Cards/Buyzone_prime.jpg" alt="" class="buyzoneprimeimg">
+            </section>
         </main>
 
         <!-- Hsections -->
