Updated phone version

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             
                     <!-- Card-4 -->
                     <div class="itemcard-container">
-                        <img src="./Images/Phone_Cards/Headsets.jpg" alt="" class="itemCards">
+                        <img src="./Images/Phone_Cards/" alt="" class="itemCards">
                     </div>
                     <!-- Card-5 -->
                     <div class="itemcard-container">
