updated login page

--- a/LoginPage/login.html
+++ b/LoginPage/login.html
@@ -17,13 +17,13 @@
                 <!-- Email -->
                  <div class="Email-section">
                     <label for="Email">Enter Email to login</label> <br>
-                    <input type="text" id="Email" pattern="[a-z0-9.]+@(gmail|outlook|yahoo|gov|org|in)+\.[a-z]{2,}">
+                    <input type="text" id="Email" pattern="[a-z0-9.]+@(gmail|outlook|yahoo|gov|org|in)+\.[a-z]{2,}" required>
                  </div>
 
                 <!-- Password -->
                  <div class="password-section">
                     <label for="Password">Password</label> <br>
-                    <input type="text" id="password" pattern="(?=.*[A-Z])(?=.*[a-z])(?=.*[\d])(?=.*[@$&!?]).{8,16}">
+                    <input type="text" id="password" pattern="(?=.*[A-Z])(?=.*[a-z])(?=.*[\d])(?=.*[@$&!?]).{8,16}" required>
                  </div>
 
                 <!--LOGIN BUTTON-->
