--- a/index.html
+++ b/index.html
@@ -486,7 +486,15 @@
                 <div class="itemcard-container">
                     <img src="./Images/Phone_Cards/Watches.jpg" alt="" class="itemCards">
                 </div>
-                <!-- Card-11-->
+                <!-- Card -11  -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/laptop.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card -12 -->
+                <div class="itemcard-container">
+                    <img src="./Images/Phone_Cards/prime.jpg" alt="" class="itemCards">
+                </div>
+                <!-- Card-13-->
                 <div class="itemcard-container">
                     <img src="./Images/Phone_Cards/Welcome_offers.jpg" alt="" class="itemCards">
                 </div>
