--- a/Buyzone/buyzone.html
+++ b/Buyzone/buyzone.html
@@ -13,6 +13,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 
+    <link rel="shortcut icon" href="../Images/favicons/website.png" type="image/x-icon">
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./carouselCard.css">
     <link rel="stylesheet" href="./hsections.css">
