Updated between 701 to 800 pixels

--- a/Buyzone/buyzone.html
+++ b/Buyzone/buyzone.html
@@ -433,6 +433,17 @@
                 <a href="#" class="seemore">See all Offers</a>
             </section>
         </section>
+        <section class="advertisementSection">
+            <span>Watch on BuyZone Prime</span>
+            <section class="additems">
+                <div class="addImage">
+                    <img src="../Images/Advertisements/primeAdd.jpg" alt="" class="posters">
+                </div>
+                <div class="addImage ">
+                    <img src="../Images/Advertisements/puspha.jpg" alt="" class="posters">
+                </div>
+            </section>
+        </section>
         <!-- mobile cards -->
         <section class="mobile">
             <section class="Mobile-cards">
