Final update before review

--- a/Buyzone/buyzone.html
+++ b/Buyzone/buyzone.html
@@ -637,10 +637,10 @@
                     <img src="../Images/Grocery_Images/Grocery_7.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Grocery_Images/Grocery_8.jpg" alt="" class="itemsImages">
+                    <img src="../Images/Grocery_Images/Grocery_14.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Grocery_Images/Grocery_9.jpg" alt="" class="itemsImages">
+                    <img src="../Images/Grocery_Images/Grocery_1.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
                     <img src="../Images/Grocery_Images/Grocery_10.jpg" alt="" class="itemsImages">
@@ -739,10 +739,10 @@
                     <img src="../Images/Watches/watch_1.webp" alt="" class="itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Watches/watch_2.webp" alt="" class="itemsImages">
+                    <img src="../Images/Watches/watch_2.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Watches/watch_3.webp" alt="" class="itemsImages">
+                    <img src="../Images/Watches/Watch_3.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
                     <img src="../Images/Watches/Watch_4.webp" alt="" class="itemsImages">
@@ -789,10 +789,10 @@
                     <img src="../Images/Mobile-phones/Mobile_4.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Mobile-phones/Mobile_5.jpg alt="" class=" itemsImages">
+                    <img src="../Images/Mobile-phones/Mobile_5.jpg" alt="" class=" itemsImages">
                 </div>
                 <div>
-                    <img src="../Images/Home_Decor/HomeDecor_6.jpg" alt="" class="itemsImages">
+                    <img src="../Images/Mobile-phones/Mobile_6.jpg" alt="" class="itemsImages">
                 </div>
                 <div>
                     <img src="../Images/Mobile-phones/Mobile_7.jpg" alt="" class="itemsImages">
